samples/_failures_safe/1761150591_d2279a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb3ebbd0.c: In function ‘get_user_choice’:
./samples/SAFE/__tmp_bb3ebbd0.c:182:11: error: expected ‘;’ at end of input
  182 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_bb3ebbd0.c:182:5: error: expected declaration or statement at end of input
  182 |     printf
      |     ^~~~~~
